fix: Adjust #main-title padding for consistent spacing on larger screens

--- a/src/Componant/HomePage/Main_Title/Main_title.module.css
+++ b/src/Componant/HomePage/Main_Title/Main_title.module.css
@@ -1,6 +1,6 @@
 #main-title{
     margin: 40px 50px;
-    padding: 20px 0 20px 35px;
+    padding: 20px 35px 20px 35px;
     background-color: #ffffff;
     border-radius: 7px;
 }
